[tool.poetry]
name = "word-count"
version = "0.1.0"
description = ""
authors = ["Mathieu Beliveau <mathieu.beliveau.1@gmail.com>"]
readme = "README.md"
packages = [{include = "word_count"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
